# VTKDemo

./: .gitignore  CMakeLists.txt  README.md
3dparty/: CMakeLists.txt
3dparty/src/: QRoundProgressBar.cpp  flowlayout.cpp
App/: CMakeLists.txt
App/src/: main.cpp  mainwindow.cpp
plugins/: CMakeLists.txt
plugins/animation/: CMakeLists.txt  animationplugin.cpp  animationplugin.h  animationscenewindow.cpp  animationscenewindow.h  animationscenewindow.ui  basicanimationwindow.cpp  basicanimationwindow.h  basicanimationwindow.ui
plugins/camera/: CMakeLists.txt  axesactorwindow.cpp  cameraplugin.h  camerawindow.cpp  camerawindow.h  mainwidget.cpp  mainwidget.ui
plugins/chart3d/: CMakeLists.txt  bar3dwindow.cpp  chart3dplugin.h  chart3dwindow.cpp  chart3dwindow.h  chart3dwindow.ui  configpoints3d.ui  lines3dwindow.cpp  points3dwindow.cpp
plugins/constructsurface/: CMakeLists.txt  constructsurfaceplugin.h  contourwindow.cpp  contourwindow.ui  dialog.cpp  dialog.ui  rendersurface.cpp  rendersurface.h  rendersurface.ui  widget.cpp  widget.h
plugins/contour2d/: CMakeLists.txt  abstractcontourgenerator.h  bandedcontourgenerator.cpp  contour2dinteractorstyle.cpp  contour2dplugin.h  contourwindow.cpp  contourwindow.ui  smoothcontourgenerator.cpp
plugins/custom3dwidget/: CMakeLists.txt  custom3dwidgetplugin.h  customxyplotrepresentation.cpp  usearrowwidgetwindow.cpp  usearrowwidgetwindow.ui  usecustomwidgetwindow.cpp  usecustomwidgetwindow.ui  vtkarrowrepresentation.cpp
plugins/displaychinese/: CMakeLists.txt  dialog.ui  displaychineseplugin.h  widget.cpp  widget.h
plugins/filereader/: CMakeLists.txt  filereaderplugin.h  filetree.cpp  filetree.h  mainwidget.cpp  mainwidget.ui  widget.cpp  widget.h
plugins/filter/: CMakeLists.txt  clipconfig.ui  clipwindow.cpp  cutconfig.ui  cutwindow.cpp  decimateconfig.ui  decimatewindow.cpp  filtersplugin.h  filterwindow.cpp  generalfilterwindow.ui  glyphconfig.ui  glyphwindow.cpp  isosurfaceconfig.ui  isosurfacewindow.cpp  probeconfig.ui  probewindow.cpp  qcustomplot.cpp  qcustomplot.h  slicewindow.cpp  smoothconfig.ui  smoothwindow.cpp  streamlineconfig.ui  streamlinewindow.cpp  thresholdwindow.cpp
plugins/imageprocess/: CMakeLists.txt  imageprocessingplugin.h  imagetree.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui
plugins/light/: CMakeLists.txt  galaxywindow.cpp  galaxywindow.ui  lightplugin.cpp  lightplugin.h  mainwidget.ui
plugins/miscellaneous/: CMakeLists.txt  backgroundwindow.cpp  backgroundwindow.ui  colormapwindow.cpp  colormapwindow.ui  conicspiralconfig.ui  diniconfig.ui  ellipsoidconfig.ui  miscellaneousplugin.h  parametricobjectswindow.cpp  parametricobjectswindow.ui  randomhillsconfig.ui  representationwidget.cpp  representationwidget.ui  romanconfig.ui  scaleaxeswindow.cpp  scaleaxeswindow.ui  splineconfig.ui  superellipsoidconfig.ui  supertoroidconfig.ui  torusconfig.ui
plugins/pick/: CMakeLists.txt  drawspherewindow.cpp  drawspherewindow.h  drawspherewindow.ui  drawsurfacewindow.cpp  drawsurfacewindow.h  drawsurfacewindow.ui  mouseeventinteractorstyle.cpp  pickactorwindow.cpp  pickactorwindow.h  pickactorwindow.ui  pickcellinteractorstyle.cpp  pickcellwindow.cpp  pickcellwindow.ui  pickingplugin.h  selectareawindow.cpp  selectareawindow.ui
plugins/pipeline/: CMakeLists.txt  pipelineplugin.h  pipelinewindow.cpp  pipelinewindow.ui
plugins/plot2d/: CMakeLists.txt  bagplotwidget.cpp  barplotsettings.ui  barplotwidget.cpp  lineplotsettings.ui  lineplotwidget.cpp  pieplotwidget.cpp  plot2dplugin.h  plotwidget.cpp  scatterplotsettings.ui  scatterplotwidget.cpp  stackedplotwidget.cpp  tableplotwidget.ui
plugins/plot3d/: CMakeLists.txt  plot3dplugin.cpp  plot3dplugin.h  plotline3dwindow.cpp  plotpoints3dwindow.cpp  plotsurfacewindow.cpp  plotwindow.cpp  tablewidgetwindow.ui
plugins/plotactor/: CMakeLists.txt  barchartactorwindow.cpp  piechartactorwindow.cpp  piesettings.ui  plotactorplugin.cpp  plotactorplugin.h  plotactorwindow.cpp  spiderplotactorwindow.cpp  xyplotactorwindow.cpp
plugins/screenshort/: CMakeLists.txt  screenshotplugin.h  screenshotwindow.cpp
plugins/shader/: CMakeLists.txt  editshaderwindow.cpp  shaderplugin.h  shaderwindow.cpp
plugins/volumerendering/: CMakeLists.txt  volumerenderingplugin.h  volumerenderingwindow.cpp
utils/: CMakeLists.txt
utils/include/: ivtkplugin.h
utils/src/: tablemodel.cpp  utils.cpp
vtkcore/: CMakeLists.txt
vtkcore/include/: abstractimageprocessor.h  abstractwidgetobserver.h  actorexporter.h  contour.h  contourwidgetobserver.h  datafilter.h  distancewidgetobserver.h  linewidgetobserver.h  modeltovtktableconverter.h  pointstopolydataconverter.h  rendererslayoutalgo.h  sliderwidgetobserver.h  surface.h  vtkplotwidget.h  vtkutils.h  vtkutils_global.h  vtkwidget.h
vtkcore/src/: abstractwidgetobserver.cpp  actorexporter.cpp  contour.cpp  contourwidgetobserver.cpp  distancewidgetobserver.cpp  filereaderutils.cpp  linewidgetobserver.cpp  modeltovtktableconverter.cpp  moveactorinteractorstyle.cpp  pointstopolydataconverter.cpp  sliderwidgetobserver.cpp  spherewidgetobserver.cpp  surface.cpp  vtkUnstructuredGridRelevantPointsFilter.cpp  vtkplot2dwidget.cpp  vtkplotpiewidget.cpp  vtkplotwidget.cpp  vtkutils.cpp  vtkwidget.cpp
widgets/: CMakeLists.txt
widgets/include/: qtcolorpicker.h
widgets/src/: qtcolorpicker.cpp  tagwidget.cpp
