set(CMAKE_DEBUG_POSTFIX "d")
add_subdirectory(animation)
add_subdirectory(buildingsources)
add_subdirectory(buildwidgets)
add_subdirectory(camera)
add_subdirectory(chart3d)
add_subdirectory(constructsurface)
add_subdirectory(custom3dwidget)
add_subdirectory(contour2d)
add_subdirectory(displaychinese)
add_subdirectory(filereader)
add_subdirectory(filter)
add_subdirectory(imageprocess)
add_subdirectory(light)
add_subdirectory(miscellaneous)
add_subdirectory(pick)
add_subdirectory(pipeline)
add_subdirectory(screenshort)
add_subdirectory(shader)
add_subdirectory(volumerendering)
add_subdirectory(plotactor)
add_subdirectory(plot3d)
add_subdirectory(plot2d)